--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -54,10 +54,13 @@
 
 <!-- Permissions  of QR-->
 <uses-permission android:name="android.permission.CAMERA" />
-<uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
-
+<!--<uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+-->
 <!-- Permissions  of googlemaps-->
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<!-- Permissions  of notifications-->
+<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
 
 </manifest>
