--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@awesome-cordova-plugins/barcode-scanner": "^5.45.0",
+    "@awesome-cordova-plugins/barcode-scanner": "^5.46.0",
     "@capacitor-community/barcode-scanner": "^3.0.0",
+    "@capacitor-community/http": "^1.4.1",
     "@capacitor/android": "4.3.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/browser": "^4.0.1",
@@ -31,14 +32,18 @@
     "@capacitor/haptics": "4.0.1",
     "@capacitor/ios": "4.3.0",
     "@capacitor/keyboard": "4.0.1",
+    "@capacitor/local-notifications": "^4.1.2",
+    "@capacitor/preferences": "^4.0.1",
     "@capacitor/share": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "@nrwl/cli": "^14.8.2",
     "angularx-qrcode": "^14.0.0",
     "firebase": "^9.11.0",
     "ionicons": "^6.0.3",
+    "jsbarcode": "^3.11.5",
     "jsqr": "^1.4.0",
     "lodash": "^4.17.21",
     "phonegap-plugin-barcodescanner": "^8.1.0",
